--- a/collectors/apps.plugin/apps_groups.conf
+++ b/collectors/apps.plugin/apps_groups.conf
@@ -86,6 +86,7 @@ fping: fping
 ioping: ioping
 go.d.plugin: *go.d.plugin*
 slabinfo.plugin: slabinfo.plugin
+ebpf.plugin: *ebpf.plugin*
 
 # -----------------------------------------------------------------------------
 # authentication/authorization related servers
