monitor_bugs: Add splunk

--- a/health/notifications/alarm-notify.sh.in
+++ b/health/notifications/alarm-notify.sh.in
@@ -402,6 +402,9 @@ done
 # slack configs
 SLACK_WEBHOOK_URL=
 
+# splunk configs
+SPLUNK_WEBHOOK_URL=
+
 # Microsoft Teams configs
 MSTEAMS_WEBHOOK_URL=
 
@@ -690,6 +693,9 @@ fi
 # check slack
 [ -z "${SLACK_WEBHOOK_URL}" ] && SEND_SLACK="NO"
 
+# check splunk
+[ -z "${SPLUNK_WEBHOOK_URL}" ] && SEND_SPLUNK="NO"
+
 # check rocketchat
 [ -z "${ROCKETCHAT_WEBHOOK_URL}" ] && SEND_ROCKETCHAT="NO"
 
@@ -773,6 +779,7 @@ check_supported_targets() {
 
   if [ "${SEND_PUSHOVER}" = "YES" ] ||
     [ "${SEND_SLACK}" = "YES" ] ||
+    [ "${SEND_SPLUNK}" = "YES" ] ||
     [ "${SEND_ROCKETCHAT}" = "YES" ] ||
     [ "${SEND_ALERTA}" = "YES" ] ||
     [ "${SEND_PD}" = "YES" ] ||
@@ -804,6 +811,7 @@ check_supported_targets() {
       SEND_PUSHBULLET="NO"
       SEND_TELEGRAM="NO"
       SEND_SLACK="NO"
+      SEND_SPLUNK="NO"
       SEND_MSTEAMS="NO"
       SEND_ROCKETCHAT="NO"
       SEND_ALERTA="NO"
@@ -955,6 +963,7 @@ for method in "${SEND_EMAIL}" \
   "${SEND_PUSHOVER}" \
   "${SEND_TELEGRAM}" \
   "${SEND_SLACK}" \
+  "${SEND_SPLUNK}" \
   "${SEND_ROCKETCHAT}" \
   "${SEND_ALERTA}" \
   "${SEND_FLOCK}" \
@@ -1671,6 +1680,45 @@ EOF
       sent=$((sent + 1))
     else
       error "failed to send slack notification ${chstr} for ${notification_description}, with HTTP response status code ${httpcode}."
+    fi
+  done
+
+  [ ${sent} -gt 0 ] && return 0
+
+  return 1
+}
+
+# -----------------------------------------------------------------------------
+# splunk sender
+
+send_splunk() {
+  local webhook="${1}" channels="${2}" httpcode sent=0 channel color payload
+
+  [ "${SEND_SPLUNK}" != "YES" ] && return 1
+
+  case "${status}" in
+  WARNING) color="warning" ;;
+  CRITICAL) color="danger" ;;
+  CLEAR) color="good" ;;
+  *) color="#777777" ;;
+  esac
+
+  for channel in ${channels}; do
+    # If channel is equal to "#" then do not send the channel attribute at all. Slack also defines channels and users in webhooks.
+    payload="$(
+      cat <<EOF
+        {
+            "event": "${alarm}, ${host}, ${status_message}, ${info}"
+        }
+EOF
+    )"
+
+    httpcode=$(docurl -k -H "Authorization: Splunk ${channel}" -d "${payload}" "${webhook}")
+    if [ "${httpcode}" = "200" ]; then
+      info "sent slack notification for: ${host} ${chart}.${name} is ${status} ${chstr}"
+      sent=$((sent + 1))
+    else
+      error "failed to send slack notification for: ${host} ${chart}.${name} is ${status} ${chstr}, with HTTP response status code ${httpcode}."
     fi
   done
 
