--- a/health/notifications/health_alarm_notify.conf
+++ b/health/notifications/health_alarm_notify.conf
@@ -22,6 +22,7 @@
 # - message to Microsoft Teams (through webhook)
 # - message to Rocket.Chat (through webhook)
 # - push notifications to your mobile phone or desktop (ntfy.sh)
+# - meessages to SPLUNK
 #
 # The 'to' line given at netdata alarms defines a *role*, so that many
 # people can be notified for each role.
@@ -455,6 +456,28 @@ SLACK_WEBHOOK_URL=""
 # - The channel or user defined in slack for the webhook (syntax: '#')
 # empty = do not send a notification for unconfigured roles
 DEFAULT_RECIPIENT_SLACK=""
+
+#------------------------------------------------------------------------------
+# SPLUNK (SPLUNK.com) global notification options
+
+# multiple recipients can be given like this:
+#                  "RECIPIENT1 RECIPIENT2 ..."
+
+# enable/disable sending slack notifications
+SEND_SPLUNK="YES"
+
+# Login to your slack.com workspace and create an incoming webhook, using the "Incoming Webhooks" App: https://slack.com/apps/A0F7XDUAZ-incoming-webhooks
+# Do not use the instructions in https://api.slack.com/incoming-webhooks#enable_webhooks, as those webhooks work only for a single channel.
+# You need only one for all your netdata servers (or you can have one for each of your netdata).
+# Without the app and a webhook, netdata cannot send slack notifications.
+SPLUNK_WEBHOOK_URL=""
+
+# if a role's recipients are not configured, a notification will be send to:
+# - A slack channel (syntax: '#channel' or 'channel')
+# - A slack user (syntax: '@user')
+# - The channel or user defined in slack for the webhook (syntax: '#')
+# empty = do not send a notification for unconfigured roles
+DEFAULT_RECIPIENT_SPLUNK=""
 
 #------------------------------------------------------------------------------
 # Microsoft Teams (office.com) global notification options
