monitor_bugs: Modify configuration files

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -58,6 +58,7 @@
 # When plugin detects that system has support to BTF, it enables integration with apps.plugin.
 #
 [ebpf programs]
+    bugs = yes
     cachestat = yes
     dcstat = no
     disk = no
