monitor_bugs: Add thread

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -58,7 +58,6 @@
 # When plugin detects that system has support to BTF, it enables integration with apps.plugin.
 #
 [ebpf programs]
-    bugs = yes
     cachestat = yes
     dcstat = no
     disk = no
@@ -74,5 +73,6 @@
     softirq = yes
     sync = no
     swap = yes
+    thread = yes
     vfs = no
     network connections = no
