--- a/collectors/ebpf.plugin/ebpf.d/thread.conf
+++ b/collectors/ebpf.plugin/ebpf.d/thread.conf
@@ -35,7 +35,7 @@
     collect pid = all
     #monitor app = netdata
     libc path = /lib64/libc.so.6
-    monitor pid = 0
+    #monitor pid = 0
     
 #    maps per core = yes
     lifetime = 300
