monitor_bugs: Find lib

--- a/health/notifications/health_alarm_notify.conf
+++ b/health/notifications/health_alarm_notify.conf
@@ -466,17 +466,10 @@ DEFAULT_RECIPIENT_SLACK=""
 # enable/disable sending slack notifications
 SEND_SPLUNK="YES"
 
-# Login to your slack.com workspace and create an incoming webhook, using the "Incoming Webhooks" App: https://slack.com/apps/A0F7XDUAZ-incoming-webhooks
-# Do not use the instructions in https://api.slack.com/incoming-webhooks#enable_webhooks, as those webhooks work only for a single channel.
-# You need only one for all your netdata servers (or you can have one for each of your netdata).
-# Without the app and a webhook, netdata cannot send slack notifications.
+# Add the URL used to communicate with your Splunk server.
 SPLUNK_WEBHOOK_URL=""
 
-# if a role's recipients are not configured, a notification will be send to:
-# - A slack channel (syntax: '#channel' or 'channel')
-# - A slack user (syntax: '@user')
-# - The channel or user defined in slack for the webhook (syntax: '#')
-# empty = do not send a notification for unconfigured roles
+# Add Splunk recipient
 DEFAULT_RECIPIENT_SPLUNK=""
 
 #------------------------------------------------------------------------------
