--- a/collectors/ebpf.plugin/ebpf.d/thread.conf
+++ b/collectors/ebpf.plugin/ebpf.d/thread.conf
@@ -34,7 +34,7 @@
     ebpf co-re tracing = probe
     collect pid = all
     #monitor app = netdata
-    libc path = /lib64/libc.so.6
+    #libc path = /lib64/libc.so.6
     #monitor pid = 0
     
 #    maps per core = yes
