monitor_bugs: Add option to kill

--- a/collectors/ebpf.plugin/ebpf.d/thread.conf
+++ b/collectors/ebpf.plugin/ebpf.d/thread.conf
@@ -34,8 +34,9 @@
     ebpf co-re tracing = probe
     collect pid = all
     #monitor app = netdata
-    #libc path = /lib64/libc.so.6
+    #libc path = libc.so.6
     #monitor pid = 0
+    kill parent pid = no
     
 #    maps per core = yes
     lifetime = 300
