monitor_bugs: CLean logs

--- a/health/health.d/bug.conf
+++ b/health/health.d/bug.conf
@@ -2,19 +2,29 @@ template: dev_memleak
       on: app.ebpf_user_leak
    class: Errors
       os: linux
-  lookup: sum -10s foreach *
+  lookup: sum -30s foreach *
    units: leak
     info: The apps group ${label:app_group} has a task ended without clean all memory.
    every: 10s
-   warn: $this > 1
+   warn: $this > 0
+
+template: dev_kill_signal
+      on: app.ebpf_send_kill
+   class: Signal
+      os: linux
+  lookup: sum -30s foreach *
+   units: leak
+    info: eBPF.plugin sends a SIGKILL to ${label:app_group}.
+   every: 10s
+    warn: $this > 0
 
 template: dev_oom
       on: app.ebpf_user_oom
    class: Errors
       os: linux
-  lookup: sum -10s foreach *
+  lookup: sum -30s foreach *
    units: leak
     info: The apps group ${label:app_group} cannot allocate memory.
    every: 10s
-   warn: $this > 1
+   warn: $this > 0
 
