prepare_functions: Disable thread by default and set them to collect all PIDs instead only real parents

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -58,7 +58,7 @@
 # When plugin detects that system has support to BTF, it enables integration with apps.plugin.
 #
 [ebpf programs]
-    cachestat = yes
+    cachestat = no
     dcstat = no
     disk = no
     fd = yes
@@ -67,7 +67,7 @@
     mdflush = no
     mount = yes
     oomkill = yes
-    process = yes
+    process = no
     shm = yes
     socket = no
     softirq = yes
