prepare_functions: Change configuration file (shm)

--- a/collectors/ebpf.plugin/ebpf.d.conf
+++ b/collectors/ebpf.plugin/ebpf.d.conf
@@ -68,7 +68,7 @@
     mount = yes
     oomkill = yes
     process = no
-    shm = yes
+    shm = no
     socket = no
     softirq = yes
     sync = no
